# bazel_reference

./: BUILD.bazel  README.md  WORKSPACE  bazel-bin  bazel-grpc_tic_tac_toe  bazel-out  bazel-testlogs  grpc_service.proto  notes  p_server.py  pclient.py  pserver.py
java/: BUILD.bazel  jserver.java
minimum_pip/: BUILD.bazel  WORKSPACE  main_func.py  notes
minimum_pip/pack/: BUILD.bazel  sub.py
python_folder/: BUILD.bazel  pclient.py  pserver.py  tes123.py
