load(":execute.bzl", "execute")
load(":library.bzl", "runfiles_binary", "runfiles_library")
load("@rules_proto_grpc//python:defs.bzl", "python_grpc_library")
load("@rules_proto_grpc//python:defs.bzl", "python_grpc_library")
load("@rules_proto_grpc//python:defs.bzl", "python_grpc_compile")
load("@grpc_python_dependencies//:requirements.bzl", "requirement")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@com_github_grpc_grpc//bazel:python_rules.bzl", "py_grpc_library",
"py_proto_library")

py_binary(
    name = "p_server",
    srcs = [":p_server.py"],
    deps = ["//python_folder:pserver"],
    imports=['']
)